# ai-engineering-lab

./: .gitignore  PUBLISH_TO_GITHUB.md  README.md
a2a-langgraph/: README.md  SIMPLE_AGENT_README.md
a2a-langgraph/simple_agent/: QUICKSTART.md  __init__.py  a2a_tool.py  agent.py  graph.py  run.py
advanced-retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md
agent-with-langgraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md
embeddings-and-rag/: Pythonic_RAG.ipynb  README.md
evaluating-rag-with-ragas/: Evaluating_RAG_with_Ragas.ipynb  README.md
fullstack-rag-pdf-chat-app/: .gitignore  MERGE.md  README.md  pyproject.toml  start-backend.sh  start-dev.sh  status-dev.sh  stop-dev.sh  test.txt  vercel.json
fullstack-rag-pdf-chat-app/.cursor/rules/: app-rule.mdc
fullstack-rag-pdf-chat-app/aimakerspace/: text_utils.py  vectordatabase.py
fullstack-rag-pdf-chat-app/aimakerspace/openai_utils/: chatmodel.py  embedding.py  prompts.py
fullstack-rag-pdf-chat-app/api/: app.py  requirements.txt
fullstack-rag-pdf-chat-app/frontend/: README.md  package-lock.json  package.json  vitest.config.mjs
fullstack-rag-pdf-chat-app/frontend/e2e/: api-key-input.spec.ts  chat-functionality.spec.ts  file-upload.spec.ts  settings-modal.spec.ts  ui-theming.spec.ts
fullstack-rag-pdf-chat-app/frontend/e2e/helpers/: error-detection.ts
fullstack-rag-pdf-chat-app/frontend/playwright-report/: index.html
fullstack-rag-pdf-chat-app/frontend/src/app/: globals.css  layout.tsx  page.tsx
fullstack-rag-pdf-chat-app/frontend/src/app/api/chat/: route.ts
fullstack-rag-pdf-chat-app/frontend/src/app/api/clear-document/: route.ts
fullstack-rag-pdf-chat-app/frontend/src/app/api/upload/: route.ts
fullstack-rag-pdf-chat-app/frontend/src/app/api/upload-pdf-only/: route.ts
fullstack-rag-pdf-chat-app/frontend/src/components/: ApiKeyInput.tsx  ChatArea.tsx  ChatInput.tsx  ErrorAlert.tsx  FileUploadArea.tsx  Header.tsx  ReplaceFileDialog.tsx  SettingsModal.tsx
fullstack-rag-pdf-chat-app/frontend/src/config/: constants.ts
fullstack-rag-pdf-chat-app/frontend/src/hooks/: useChat.ts  useFileUpload.ts  useSettings.ts
fullstack-rag-pdf-chat-app/frontend/src/hooks/__tests__/: useChat.test.ts  useFileUpload.test.ts  useSettings.test.ts
fullstack-rag-pdf-chat-app/frontend/src/test/: setup.ts
fullstack-rag-pdf-chat-app/frontend/src/types/: index.ts
fullstack-rag-pdf-chat-app/frontend/src/utils/: theme.ts
fullstack-rag-pdf-chat-app/frontend/src/utils/__tests__/: theme.test.ts
insurance-lens-app/: .gitignore  README.md
insurance-lens-app/backend/: .env_example  Makefile  README.md  pyproject.toml
insurance-lens-app/backend/app/: main.py
insurance-lens-app/backend/app/agents/: __init__.py  graph.py  nodes.py  state.py
insurance-lens-app/backend/app/api/: __init__.py
insurance-lens-app/backend/app/api/routes/: __init__.py  health.py  policies.py
insurance-lens-app/backend/app/core/: config.py  constants.py  dependencies.py  exceptions.py  llm_factory.py  results.py
insurance-lens-app/backend/app/models/: __init__.py  internal.py  schemas.py
insurance-lens-app/backend/app/services/: __init__.py  answer_generator.py  clause_analyzer.py  pdf_processor.py  policy_service.py  question_classifier.py  text_chunker.py  vector_store.py  web_search_agent.py
insurance-lens-app/backend/test_scripts/: test_api_comprehensive.py  test_api_direct.py  test_ask_question.py  test_clause_analysis.py  test_langgraph.py  test_paragraph_chunking.py  test_rerank_retrieval.py  test_results.json  test_semantic_chunking.py
insurance-lens-app/docs/: AUTOMATION_SUMMARY.md  ERROR_PREVENTION.md  FUTURE_IMPROVEMENTS.md  LANGUAGE_CONFIGURATION.md  MYPY_SETUP.md  OPTIMIZATIONS.md  PHASE2_PLAN.md  PROGRESS.md  SESSION_SUMMARY_2025-10-19.md  TESTING_RESULTS.md
insurance-lens-app/frontend/: package-lock.json  package.json
insurance-lens-app/notebooks/: insurancelens_evaluation.ipynb
langgraph-platform/: README.md  mcp_server.py  pyproject.toml  setup_guide.md
langgraph-platform/.claude/: rules
langgraph-platform/app/: mcp_client.py  tools.py
mcp/: OpenAI_Responses_API_Data_and_Connectors.ipynb  README.md
multi-agent-with-langgraph/: Multi_Agent_RAG_LangGraph.ipynb  README.md
open-deep-research/: README.md
openai-agents-sdk/: OpenAI_Agents_SDK.ipynb  README.md
production-rag/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangChain_LangGraph_Practice.ipynb  README.md
production-rag-and-guardrails/: GUARDRAILS_EXPLAINED.md  Prototyping_LangChain_Application_with_Production_Minded_Changes.ipynb  README.md
production-rag-and-guardrails/.claude/: settings.local.json
synthetic-data-generation-and-langsmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith.ipynb
(+16 files in other folders)
